Add index.ts in module

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "repository": "bonustrack/snapshot-spaces",
   "license": "MIT",
   "files": [
-    "spaces"
+    "spaces",
+    "index.ts"
   ]
 }
